Bug 1432309 - ensure the GL context is current when updating wr. r=sotaro

To avoid future issues, this is done by combining the Render and Update methods
into a single call. As a minor side-effect, timing in the parent method now
includes the time to run update.

MozReview-Commit-ID: GJ0l049eFRj

--HG--
extra : rebase_source : f9b4ee6f34bc45d87b3df40e5a25f3bfb2ec8068