gfx/webrender_bindings/RendererOGL.cpp
@@ -81,14 +81,8 @@ RendererOGL::GetExternalImageHandler()
   };
 }
 
-void
-RendererOGL::Update()
-{
-  wr_renderer_update(mRenderer);
-}
-
 bool
-RendererOGL::Render()
+RendererOGL::UpdateAndRender()
 {
   uint32_t flags = gfx::gfxVars::WebRenderDebugFlags();
 
@@ -116,6 +110,8 @@ RendererOGL::Render()
   if (!mCompositor->BeginFrame()) {
     return false;
   }
+
+  wr_renderer_update(mRenderer);
 
   auto size = mCompositor->GetClientSize();
 
